# django-eav2

./: .coveragerc  .coveralls.yml  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  __init__.py  admin.py  fields.py  forms.py  manage.py  managers.py  models.py  pyproject.toml  pytest.ini  registry.py  requirements.txt  runtests  runtests.py  settings.py  setup.cfg  setup.py  tox.ini  urls.py  utils.py  validators.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dependabot-auto-merge.yml  release.yml  test.yml
django_test_app/: manage.py
django_test_app/django_test_app/: settings.py  urls.py  wsgi.py
django_test_app/main_app/: apps.py  models.py
django_test_app/main_app/migrations/: 0001_initial.py
docs/: Makefile  conf.py  docstrings.rst  index.rst
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  usage.rst
docs/source/_static/: styles.css
docs/source/_templates/: layout.html  sidebarintro.html  sidebarlogo.html
eav/: __init__.py  admin.py  decorators.py  exceptions.py  fields.py  forms.py  managers.py  models.py  queryset.py  registry.py  settings.py  utils.py  validators.py  widgets.py
eav/locale/id/LC_MESSAGES/: django.po
eav/locale/ru/LC_MESSAGES/: django.mo  django.po
eav/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
eav/logic/: entity_pk.py  managers.py  model_managers.py  object_pk.py  slug.py
eav/migrations/: 0001_initial.py  0002_add_entity_ct_field.py  0002_add_new_fields.py  0002_auto_20161014_0157.py  0002_auto_20180801_0350.py  0003_add_values_unique_constraint.py  0003_auto_20210404_2209.py  0004_alter_value_value_bool.py  0005_auto_20210510_1305.py  0006_add_entity_uuid.py  0007_alter_value_value_int.py  0008_use_native_slugfield.py  0009_enchance_naming.py  0010_alter_attribute_datatype_alter_attribute_id_and_more.py  0010_dynamic_pk_type_for_models.py  0011_alter_attribute_id_alter_enumgroup_id_and_more.py  0011_update_defaults_and_meta.py  0012_add_value_uniqueness_checks.py  0012_alter_attribute_id_alter_enumgroup_id_and_more.py
eav/models/: __init__.py  attribute.py  entity.py  enum_group.py  enum_value.py  value.py
eav/tests/: __init__.py  data_validation.py  models.py  registry.py  set_and_get.py
eav_ng/: models.py  utils.py
eav_ng/tests/: models.py  tests.py
fixtures/: auth.json  fake.json
test_project/: apps.py  models.py  settings.py
test_project/migrations/: 0001_initial.py
tests/: __init__.py  attributes.py  basics.py  cache.py  data_validation.py  filters.py  forms.py  limiting_attributes.py  metaclass_models2.py  metaclass_models3.py  misc_models.py  models.py  queries.py  registry.py  set_and_get.py  test_attributes.py  test_data_validation.py  test_forms.py  test_logic.py  test_misc_models.py  test_models.py  test_natural_keys.py  test_primary_key_format.py  test_queries.py  test_registry.py  test_set_and_get.py  test_settings.py  test_value.py  test_widgets.py  tests.py
