[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']
skip-string-normalization = true
include = '\.pyi?$'


[tool.poetry]
name = "django-eav2"
description = "Entity-Attribute-Value storage for Django"
version = "1.4.0"
license = "GNU Lesser General Public License (LGPL), Version 3"
packages = [
  { include = "eav" }
]


authors = [
  "Mauro Lizaur <mauro@sdf.org>",
]

readme = "README.md"

repository = "https://github.com/jazzband/django-eav2"

keywords = [
  "django",
  "django-eav2",
  "database",
  "eav",
  "sql",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
  "Programming Language :: Python",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
]

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = false
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2,<4.3"

# Docs extra:
sphinx = { version = ">=5,<7", optional = true }
sphinx-autodoc-typehints = { version = "^1.12", optional = true }
m2r2 = { version = "^0.3", optional = true }
tomlkit = { version = "^0.11", optional = true }
sphinx-rtd-theme = { version = "^1.0.0", optional = true }

[tool.poetry.dev-dependencies]
mypy = "^1.4"

wemake-python-styleguide = "^0.17"
flake8-pytest-style = "^1.7"
nitpick = "^0.33"
black = "^22.12"

safety = "^2.3"

pytest = "^6.2"
pytest-cov = "^4.1"
pytest-randomly = "^3.12"
pytest-pythonpath = "^0.7.4"
pytest-django = "^4.5.2"
hypothesis = "^6.80.1"

doc8 = "^0.11.2"

[tool.poetry.extras]
docs = [
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinx_rtd_theme",
  "m2r2",
  "tomlkit",
]
