[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']
skip-string-normalization = true
include = '\.pyi?$'


[tool.poetry]
name = "django-eav2"
description = "Entity-Attribute-Value storage for Django"
version = "1.6.0"
license = "GNU Lesser General Public License (LGPL), Version 3"
packages = [
  { include = "eav" }
]


authors = [
  "Mauro Lizaur <mauro@sdf.org>",
]

readme = "README.md"

repository = "https://github.com/jazzband/django-eav2"

keywords = [
  "django",
  "django-eav2",
  "database",
  "eav",
  "sql",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
]

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = false
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2,<5.1"
pyyaml = { version = "^6.0.1", python = "^3.12" }

[tool.poetry.group.test.dependencies]
mypy = "^1.6"

wemake-python-styleguide = "^0.17"
flake8-pytest-style = "^1.7"
nitpick = ">=0.34,<0.36"
black = ">=22.12,<25.0"

safety = ">=2.3,<4.0"

pytest = ">=7.4.3,<9.0.0"
pytest-cov = "^4.1"
pytest-randomly = "^3.15"
pytest-django = "^4.5.2"
hypothesis = "^6.87.1"

doc8 = ">=0.11.2,<1.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.0,<8.0"
sphinx-rtd-theme = ">=1.3,<3.0"
sphinx-autodoc-typehints = ">=1.19.5,<3.0.0"
m2r2 = "^0.3"
tomlkit = ">=0.11,<0.13"
